--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -3,8 +3,8 @@
     <app-new-task></app-new-task>
   </div>
   <div class="todo-buttons">
-    <button class="toggle-button" (click)="toggleCompletedTasks()">
-      {{ showCompletedTasks ? 'Exibir Tarefas Concluídas' : 'Ocultar Tarefas Concluídas' }}
+    <button (click)="toggleCompletedTasksView()">
+      {{ showCompletedTasks ? 'Esconder Completas' : 'Mostrar Completas' }}
     </button>
     <button (click)="clearCompletedTasks()">Limpar Tarefas Concluídas</button>
     <button (click)="clearAll()" [innerHTML]="labelClearAll"></button>
@@ -12,7 +12,7 @@
   <div class="todo-list_container">
     <div class="todo-list_todo">
       <app-todo-item
-        *ngFor="let todo of todos"
+        *ngFor="let todo of displayedTodos"
         [todo]="todo"
       ></app-todo-item>
     </div>
