feat: botão de editar posicionado e remover vermelho

--- a/src/app/todo/todo-item/todo-item.component.css
+++ b/src/app/todo/todo-item/todo-item.component.css
@@ -27,22 +27,28 @@
   text-decoration: line-through;
 }
 
-    .todo-item_edit{
-    color: blue;
-    width: 10px;
-    width: fit-content;
-    justify-content: end;
-  }
+.buttons {
+  display: flex;
+  width: 20%;
+  justify-content: space-between;
+}
 
-  .todo-item_delete {
-    width: 10px;
-    width: fit-content;
-    color: red;
-    background: none;
-    border: none;
-    cursor: pointer;
-  }
-  
+.todo-item_edit{
+color: blue;
+width: 10px;
+width: fit-content;
+justify-content: end;
+}
+
+.todo-item_delete {
+color: red;
+width: 10px;
+width: fit-content;
+background: none;
+border: none;
+cursor: pointer;
+}
+
 .fa-trash-alt:hover {
   color: rgba(65, 63, 63, 0.62);
 }
